<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playAgain"
            android:text="@string/play_again"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:columnCount="2"
            android:rowCount="2"
            app:layout_constraintTop_toBottomOf="@+id/questionTextView">

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="#7AFB7C"
                android:fontFamily="sans-serif-black"
                android:onClick="chooseAnswer"
                android:tag="0"
                android:text="@string/_31"
                android:textColor="@color/black"
                android:textSize="80sp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="#fb92d8"
                android:fontFamily="sans-serif-black"
                android:onClick="chooseAnswer"
                android:tag="1"
                android:text="@string/_32"
                android:textColor="@color/black"
                android:textSize="80sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="#fb92d8"
                android:fontFamily="sans-serif-black"
                android:onClick="chooseAnswer"
                android:tag="2"
                android:text="@string/_33"
                android:textColor="@color/black"
                android:textSize="80sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="#7AFB7C"
                android:fontFamily="sans-serif-black"
                android:onClick="chooseAnswer"
                android:tag="3"
                android:text="@string/_34"
                android:textColor="@color/black"
                android:textSize="80sp" />


        </GridLayout>

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/pink"

            android:fontFamily="@font/bowlby_one"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/_31_15"
            android:textColor="@color/black"
            android:textSize="55sp"
            app:layout_constraintTop_toBottomOf="@+id/timer"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/bestScoreEverScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:gravity="end"
            android:padding="3dp"
            android:text="@string/_150"
            android:textColor="@color/pink"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/questionTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.795"
            app:layout_constraintStart_toEndOf="@+id/timer"
            app:layout_constraintTop_toBottomOf="@+id/bestScoreEverText"
            app:layout_constraintVertical_bias="0.294" />

        <TextView
            android:id="@+id/correctQuestionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/courgette"
            android:gravity="start"
            android:padding="3dp"
            android:text="@string/correct_0"
            android:textColor="@color/pink"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/TotalQuestionTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TotalQuestionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_weight="1"
            android:fontFamily="@font/courgette"
            android:gravity="start"
            android:padding="3dp"
            android:text="@string/total_0"
            android:textColor="@color/pink"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/questionTextView"
            app:layout_constraintEnd_toStartOf="@+id/timer"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/pink"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/playAgainButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="end"
            android:textColor="@color/pink"
            android:text="@string/_60s"
            android:textSize="36sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer_icon" />

        <ImageButton
            android:id="@+id/timer_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/timer_icon"
            android:src="@drawable/ic_timer_black_24dp"
            app:layout_constraintEnd_toStartOf="@+id/bestScoreEverText"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toEndOf="@+id/correctQuestionTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bestScoreEverText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/courgette"
            android:gravity="end"
            android:padding="3dp"
            android:text="@string/best_score"
            android:textColor="@color/pink"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
